--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <meta name="google-site-verification" content="5EhNyxuYBvGUYpNjH57vdkr-PPqqlX3L93v_2ihc-2U"/>
+  <meta name="google-site-verification" content="5EhNyxuYBvGUYpNjH57vdkr-PPqqlX3L93v_2ihc-2U" />
   <meta name="theme-color" content="#fff" />
   <meta name="robots" content="index, follow" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="language" content="English" />
   <meta name="revisit-after" content="10 days" />
   <meta name="author" content="Save A stray,Aditya,Devcost tech." />
-  <meta name="description" content="'We feed and treat owner-less street animals. Save a stray is a stray animal feeding and an animal welfare organisation near Noida, Uttar pradesh and through their feeding and rescue we try to inspire the community to care for the lives of all animals." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Save A Stray, Noida</title>
+  <meta name="description"
+    content="'We feed and treat owner-less street animals. Save a stray is a stray animal feeding and an animal welfare organisation near Noida, Uttar pradesh and through their feeding and rescue we try to inspire the community to care for the lives of all animals."  />
+  <link rel="stylesheet" type="text/css" charset="UTF-8"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
 </head>
 
 <body>
